@@ -174,15 +174,25 @@ The order of the node names in the list is not important; the node names
 will be sorted my SLURM.
 
 .TP
-\fB\-\-get\-user\-env\fR[=\fItimeout\fR]
+\fB\-\-get\-user\-env\fR[=\fItimeout\fR][\fImode\fR]
 This option will tell sbatch to retrieve the
-login environment variables for the user specified in the \-\-uid option.
-The environment variables are retrieved by running "su - <username> -c
-/usr/bin/env" and parsing the output.  Be aware that any environment
-variables already set in sbatch's environment will take precedence over any
-environment variables in the user's login environment.
-Optional timeout value is in seconds. Default value is 8 seconds.
-NOTE: This option only works if the caller has an effective uid of "root".
+login environment variables for the user specified in the \fB\-\-uid\fR option.
+The environment variables are retrieved by running something of this sort
+"su - <username> -c /usr/bin/env" and parsing the output.
+Be aware that any environment variables already set in sbatch's environment
+will take precedence over any environment variables in the user's
+login environment.
+The optional \fItimeout\fR value is in seconds. Default value is 8 seconds.
+The optional \fImode\fR value control the "su" options.
+With a \fImode\fR value of "S", "su" is executed without the "\-" option.
+With a \fImode\fR value of "L", "su" is executed with the "\-" option,
+replicating the login environment.
+If \fImode\fR not specified, the mode established at SLURM build time
+is used.
+Example of use include "\-\-get\-user\-env", "\-\-get\-user\-env=10"
+"\-\-get\-user\-env=10L", and "\-\-get\-user\-env=S".
+NOTE: This option only works if the caller has an
+effective uid of "root".
 This option was originally created for use by Moab.
 
 .TP
