@@ -766,7 +766,7 @@ step_create(job_step_create_request_msg_t *step_specs,
 	if (job_ptr == NULL)
 		return ESLURM_INVALID_JOB_ID ;
 
-	if (job_ptr->job_state == JOB_SUSPENDED)
+	if ((job_ptr->job_state == JOB_SUSPENDED) || IS_JOB_PENDING(job_ptr))
 		return ESLURM_DISABLED;
 
 	if (batch_step) {
@@ -780,9 +780,6 @@ step_create(job_step_create_request_msg_t *step_specs,
 	if ((step_specs->user_id != job_ptr->user_id) &&
 	    (step_specs->user_id != 0))
 		return ESLURM_ACCESS_DENIED ;
-
-	if (IS_JOB_PENDING(job_ptr))
-		return ESLURM_INVALID_JOB_ID ;
 
 	if (IS_JOB_FINISHED(job_ptr) || 
 	    (job_ptr->end_time <= time(NULL)))
